@@ -1,69 +1,94 @@
 plugins {
-    id 'org.jetbrains.kotlin.multiplatform' version '1.3.31'
-    id 'com.github.johnrengelman.shadow' version '5.0.0'
+    id 'application'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
 }
 
 group 'com.github.tarcv.zandronum'
 version '0.4.0'
 
+application {
+    mainClassName = "com.github.tarcv.zandronum.debotc.MainKt"
+}
+
 repositories {
     mavenCentral()
 }
 
-kotlin {
-    jvm() { // good for debugging, bad for distribution
-    }
-    mingwX64("windows") {
-        binaries {
-            executable()
-        }
-    }
-    linuxX64("linux") {
-        binaries {
-            executable()
-        }
-    }
+def moduleName = "debotc.main"
+def javaHome = System.getProperty("java.home")
 
-    sourceSets {
-        commonMain {
-            dependencies {
-                implementation kotlin('stdlib-common')
-            }
-        }
-        commonTest {
-            dependencies {
-                implementation kotlin('test-common')
-                implementation kotlin('test-annotations-common')
-            }
-        }
+java {
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
+}
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
 
-        nativeMain {
-            kotlin.srcDir('src/nativeMain/kotlin')
-        }
-        windowsMain {
-            dependsOn nativeMain
-        }
-        linuxMain {
-            dependsOn nativeMain
-        }
-
-        jvmMain {
-            dependencies {
-                implementation kotlin('stdlib-jdk8')
-            }
-        }
-        jvmTest {
-            dependencies {
-                implementation kotlin('test-junit')
-                implementation "org.jetbrains.kotlin:kotlin-reflect"
-            }
+afterEvaluate {
+    tasks.named("compileJava", JavaCompile) {
+        inputs.property("moduleName", moduleName)
+        doFirst {
+            def args = [
+                    "--module-path", classpath.asPath,
+                    "--patch-module", "$moduleName=${sourceSets["main"].output.asPath}"
+            ]
+            println("Javac args -- ${args}")
+            options.compilerArgs = args
+            classpath = files()
         }
     }
 }
 
-task shadowJar(type: com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar) {
-    def target = kotlin.targets.jvm
-    from target.compilations.main.output
-    def runtimeClasspath = target.compilations.main.runtimeDependencyFiles
-    configurations = [runtimeClasspath]
+def kotlinVersion = '1.3.72'
+sourceSets {
+    main {
+        dependencies {
+            api("org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion:modular")
+            api("org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion:modular")
+            api("org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion:modular")
+        }
+
+        kotlin {
+            srcDirs('src/commonMain/kotlin', 'src/jvmMain/kotlin')
+            exclude('**/Util.kt')
+        }
+        java.srcDirs('src/commonMain/java', 'src/jvmMain/java')
+    }
+}
+
+task jlink(type: Exec) {
+    dependsOn('jar')
+
+    def outputDir = file("$buildDir/jlink")
+    inputs.files(configurations.runtimeClasspath)
+    inputs.files(tasks.jar.archiveFile)
+    outputs.dir(outputDir)
+
+    doFirst {
+        delete(outputDir)
+
+        def modulePaths = [file("$javaHome/jmods"), configurations.runtimeClasspath.files, jar.archiveFile.get()]
+                .collect {
+                    if (it instanceof Iterable) {
+                        it
+                    } else {
+                        [it]
+                    }
+                }
+                .flatten()
+                .join(File.pathSeparator)
+        def launcher = "$moduleName/${application.mainClassName}"
+        println("Module path -- $modulePaths")
+        println("Launcher -- $launcher")
+        commandLine("$javaHome/bin/jlink",
+                "--module-path",
+                modulePaths,
+                "--add-modules", moduleName,
+                "--launcher", "decompiler=" + launcher,
+                "--output", outputDir
+        )
+    }
 }
